--- a/imports/ui/public/auth/reset-password.html
+++ b/imports/ui/public/auth/reset-password.html
@@ -1,5 +1,5 @@
 <template name="public.auth.reset-password">
-    <section class="hero is-fullheight is-primary is-bold">
+    <section class="hero is-medium">
         <div class="hero-body">
             <div class="container">
                 <div class="columns">
